# ChangeLog for app-cdr/cdrtools
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-cdr/cdrtools/ChangeLog,v 1.176 2007/07/03 10:26:41 armin76 Exp $

  03 Jul 2007; Raúl Porcel <armin76@gentoo.org>
  cdrtools-2.01.01_alpha25.ebuild:
  alpha stable wrt #177472

  02 Jun 2007; Lars Weiler <pylon@gentoo.org> +files/mkisofs-iconv-25.patch,
  cdrtools-2.01.01_alpha25.ebuild, cdrtools-2.01.01_alpha27.ebuild:
  Re-added the mkisofs-unicode-patch from bug #178856.

*cdrtools-2.01.01_alpha27 (02 Jun 2007)

  02 Jun 2007; Lars Weiler <pylon@gentoo.org> -files/mkisofs-iconv-10.patch,
  -files/mkisofs-iconv-18.patch, cdrtools-2.01.01_alpha25.ebuild,
  +cdrtools-2.01.01_alpha27.ebuild:
  Version bump.  Minor fixes.

  20 May 2007; Joseph Jezak <josejx@gentoo.org>
  cdrtools-2.01.01_alpha25.ebuild:
  Marked ppc stable for bug #177472.

  16 May 2007; Jeroen Roovers <jer@gentoo.org>
  cdrtools-2.01.01_alpha25.ebuild:
  Stable for HPPA (bug #177472).

  16 May 2007; Daniel Gryniewicz <dang@gentoo.org>
  cdrtools-2.01.01_alpha25.ebuild:
  Marked stable on amd64 for bug #177472

  15 May 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  cdrtools-2.01.01_alpha25.ebuild:
  Stable on sparc wrt #177472

  13 May 2007; Raúl Porcel <armin76@gentoo.org>
  cdrtools-2.01.01_alpha25.ebuild:
  ia64 + x86 stable wrt bug 177472

  13 May 2007; Markus Rothe <corsair@gentoo.org>
  cdrtools-2.01.01_alpha25.ebuild:
  Stable on ppc64; bug #177472

  13 May 2007; Joshua Kinard <kumba@gentoo.org>
  cdrtools-2.01.01_alpha25.ebuild:
  Added ~mips to KEYWORDS.

*cdrtools-2.01.01_alpha26 (12 May 2007)

  12 May 2007; Lars Weiler <pylon@gentoo.org>
  +cdrtools-2.01.01_alpha26.ebuild:
  Version bump; bug #176823.

  12 May 2007; Lars Weiler <pylon@gentoo.org> -cdrtools-2.01-r3.ebuild:
  Removing old version which was stable for m68k, but as no m68k-arch-alias
  exists, I can't ask for new stabilisations.

*cdrtools-2.01.01_alpha25 (10 Apr 2007)
