@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX cdrtools-2.01-scsi-remote.patch 938 RMD160 146ba7ddd5a0d987ea554bcf7e50aea5bf0690ff SHA1 0388616bf453e46fa3186c93cc17f881508aa562 SHA256 93719cbcbf594be14e0aa993b49157fc6be2885e94f4a92947ea73bd58ed2a62
 MD5 3b1ffea11e1653b7b16c2c89597d1c5a files/cdrtools-2.01-scsi-remote.patch 938
 RMD160 146ba7ddd5a0d987ea554bcf7e50aea5bf0690ff files/cdrtools-2.01-scsi-remote.patch 938
@@ -33,6 +36,7 @@ SHA256 791c9d39ded40731ecfaf0e4026c4e43fd98629691b04a2ab7b2f26cb10ac56f files/mk
 DIST cdrtools-2.01.01a10.tar.bz2 1499765 RMD160 242c7d325394e4cbb9a4659799dc333a910dc690 SHA1 e0b42b3454e961c9cf25f10d955052758d679f67 SHA256 1dea21bafae4af6b738c5e114aec26882f6f8b739340dfba6098c29550d4a39f
 DIST cdrtools-2.01.01a25.tar.bz2 1590924 RMD160 8d55d2b784dc94c58d75cf15bb9be1c90a0f3f2a SHA1 bdec95d5683e22230867fdfa0506df2e73bb6bdc SHA256 f774fac641d9b312563265f0538f018006fb960251bb954a1873361d85fd5e52
 DIST cdrtools-2.01.01a27.tar.bz2 1594145 RMD160 c009cf067318da565a66420009406265df12b645 SHA1 fcb9bcdb697e474f2e60889fe64571b06442ffb4 SHA256 130527e8dcf67b64693ac4fc0cfaa4670af3e45c81c1ced2e90792988a586989
+DIST cdrtools-2.01.01a29.tar.bz2 1655595 RMD160 cdab0cf04ea334651cb5010977338a41996e273b SHA1 7669090796105ef953729c3b563bb6db702ab79c SHA256 b3f5ecf666331e5fbe81952d5adfafabf1c2b7161a2d7b758d16854b81fc0364
 DIST cdrtools-2.01.tar.bz2 1400389 RMD160 b34a8b81b21cc8ed1927f34e44130513d2ee0407 SHA1 f94cfe51dd512d4e0b9106b986bde12d4f7967ce SHA256 728b6175069a77c4d7d92ae60108cbda81fbbf7bc7aa02e25153ccf2092f6c22
 EBUILD cdrtools-2.01-r1.ebuild 3001 RMD160 ce1bb1e389f11553c3aafca83b4c9fd2e44b897b SHA1 d092c88b1467ea0661c1d3dd71bb392e1e00a28e SHA256 d7d2c06aafad22a5f7cc801a6ffd83dad814011633b861e4a2681fafbd0daaf1
 MD5 31214970675829b8325b07b2d12b0e30 cdrtools-2.01-r1.ebuild 3001
@@ -50,10 +54,14 @@ EBUILD cdrtools-2.01.01_alpha27.ebuild 3683 RMD160 cd89c2a78a25086c36a00a4e7cf45
 MD5 3e0eeb579b2d17f0da2f6f2d6a213a49 cdrtools-2.01.01_alpha27.ebuild 3683
 RMD160 cd89c2a78a25086c36a00a4e7cf453d5e8330041 cdrtools-2.01.01_alpha27.ebuild 3683
 SHA256 5507c015ef6a247d53ecd5fe4cd48dd8ac50aae07fc1daf1166047967ca7f765 cdrtools-2.01.01_alpha27.ebuild 3683
-MISC ChangeLog 26727 RMD160 2661201cd188b9b77c4a4b4956e3ca5b39967698 SHA1 e5ac223ed0cda9c5793533e40fc44ba83e2b0106 SHA256 a1b5c4f270310ac4ad0a56df3ef2b2fcee07355af159c7cc3757757117941aab
-MD5 00792be6884e77e0a55bcdd3f46206cc ChangeLog 26727
-RMD160 2661201cd188b9b77c4a4b4956e3ca5b39967698 ChangeLog 26727
-SHA256 a1b5c4f270310ac4ad0a56df3ef2b2fcee07355af159c7cc3757757117941aab ChangeLog 26727
+EBUILD cdrtools-2.01.01_alpha29.ebuild 3622 RMD160 4062faea4f055c1c54720f12786c036f76b82bb5 SHA1 547973abed4af1f08dc02b63c0c48f45eb89eba1 SHA256 011f7a88fe30d222ef5d06b1b78f4a9bb49aa734484dd81182d3b1d967f42a73
+MD5 f3fc5c21855542ae36fda60309b350ca cdrtools-2.01.01_alpha29.ebuild 3622
+RMD160 4062faea4f055c1c54720f12786c036f76b82bb5 cdrtools-2.01.01_alpha29.ebuild 3622
+SHA256 011f7a88fe30d222ef5d06b1b78f4a9bb49aa734484dd81182d3b1d967f42a73 cdrtools-2.01.01_alpha29.ebuild 3622
+MISC ChangeLog 26934 RMD160 005862706175b5de12ec1d46b6550fd49138908a SHA1 969deed6bbd00939238bf620ce1a03d572dac11c SHA256 722fdc70430717d203c2eed3758ed299691f483756ddf2c2ef144c96af02de9c
+MD5 614f8b4f7e03bf7ef94a6caae0669da6 ChangeLog 26934
+RMD160 005862706175b5de12ec1d46b6550fd49138908a ChangeLog 26934
+SHA256 722fdc70430717d203c2eed3758ed299691f483756ddf2c2ef144c96af02de9c ChangeLog 26934
 MISC metadata.xml 254 RMD160 f274a70fa23d8064efddcce296e0aed3344bd86b SHA1 ab52ea446603ae6242dae41e0c90fcf7ae8f09cf SHA256 21400abf2dad3e5b7b0d2f7f9586c33cba6336b42a97e1f2b3e7e8b9db0daae5
 MD5 015ab4293805faaa417d5ac5304750c4 metadata.xml 254
 RMD160 f274a70fa23d8064efddcce296e0aed3344bd86b metadata.xml 254
@@ -70,3 +78,13 @@ SHA256 6984ee8a19e88bf1bed4b99aa03505d7b9756a6e518f6cc42a2ae1a8af6b9b20 files/di
 MD5 c966838930fb55b1cda518e062ae7e1c files/digest-cdrtools-2.01.01_alpha27 265
 RMD160 a2e24bc87ba6debe30b8157575d18d5571d97ac1 files/digest-cdrtools-2.01.01_alpha27 265
 SHA256 3f5ae1972474f6d5cf2b1b8536aa6d492001a68e62d54ed8890a47d5a15432ca files/digest-cdrtools-2.01.01_alpha27 265
+MD5 f55b0a7e357db3246766f289b1d10b93 files/digest-cdrtools-2.01.01_alpha29 265
+RMD160 b7c725e5c4e3ca07c745bd860e1a8a620284290a files/digest-cdrtools-2.01.01_alpha29 265
+SHA256 8f61e60c3dca370199d734935f334daf16d63c132170904160daa884777817fd files/digest-cdrtools-2.01.01_alpha29 265
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.7 (GNU/Linux)
+
+iD8DBQFGkszk6IPkARlRZfQRAtzCAJ9UGC0HxJ3NMBm02xRkBIu21W3PeQCfdDUL
+y6UvGYnVS4t67H55Hej2T5c=
+=o8f+
+-----END PGP SIGNATURE-----
