@@ -1,0 +1,3 @@
+MD5 a5a396b9ec9d1d55f3f8c334c71ad2bd cdrtools-2.01.01a29.tar.bz2 1655595
+RMD160 cdab0cf04ea334651cb5010977338a41996e273b cdrtools-2.01.01a29.tar.bz2 1655595
+SHA256 b3f5ecf666331e5fbe81952d5adfafabf1c2b7161a2d7b758d16854b81fc0364 cdrtools-2.01.01a29.tar.bz2 1655595
